# Zesta-Car-App

./: .gitignore  .npmrc  CITATION.cff  LICENSE  README.adoc  README.md  apm.lock.yaml  apm.yml  flake.nix  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.apm/instructions/: project-knowledge.instructions.md
.github/workflows/: flake-check.yml
client/: .gitignore  App.js  app.json  babel.config.js  index.js  package.json
client/config/: env.js
client/hooks/: useWebSocket.js
client/styles/: appStyles.js
flake/: devshells.nix
flake/actions/: actions.nix  default.nix
server/: package.json  pyproject.toml  recog_exec.py  server_node.js
stubs/ip-stub/: index.js  package.json
